# multi-robot-fleet-ros2

./: .gitignore  README.md  setup.sh
ai_skills/ur_data_collector/: CMakeLists.txt  package.xml  setup.py
ai_skills/ur_data_collector/config/: collector_params.yaml
ai_skills/ur_data_collector/launch/: data_collector.launch.py
ai_skills/ur_data_collector/scripts/: train_bc.py
ai_skills/ur_data_collector/ur_data_collector/: collector_node.py
ai_skills/ur_smolvla/: CMakeLists.txt  package.xml
ai_skills/ur_smolvla/launch/: smolvla_inference.launch.py
ai_skills/ur_smolvla/ur_smolvla/: inference_node.py
fleet_management/rmf_demos/rmf_demos_fleet_adapter/rmf_demos_fleet_adapter/: easy_full_control_compat.py  fleet_adapter.py
interfaces/ur_interfaces/: CMakeLists.txt  package.xml
interfaces/ur_interfaces/msg/: DetectedObject.msg  DetectedObjectArray.msg
manipulation/moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_controllers_onrobot.yaml  ompl_planning.yaml  pilz_industrial_motion_planner_planning.yaml  ros2_controllers.yaml  ros2_controllers_onrobot.yaml  sensors_3d.yaml  stomp_planning.yaml  ur.ros2_control.xacro  ur.srdf  ur.srdf.xacro  ur.urdf  ur.urdf.xacro
manipulation/moveit_config/launch/: move_group.launch.py
manipulation/moveit_config/rviz/: moveit.rviz  point_cloud.rviz
manipulation/onrobot_description/: CMakeLists.txt
manipulation/onrobot_description/launch/: test.launch.py
manipulation/onrobot_description/urdf/: onrobot_rg.urdf.xacro
manipulation/robotiq_2f_85_gripper_visualization/urdf/: robotiq_arg2f_85_model_macro.xacro
manipulation/ur_description/launch/: view_ur.launch.py
manipulation/ur_description/urdf/: intel_rgbd_cam_d435.urdf.xacro  ur.urdf.xacro  ur_macro.xacro
manipulation/ur_llm_planner/: CMakeLists.txt  package.xml  setup.py
manipulation/ur_llm_planner/launch/: llm_planner.launch.py
manipulation/ur_llm_planner/ur_llm_planner/: llm_planner_node.py  motion_executor.py
manipulation/ur_moveit_demos/: BUGFIXES.md  CMakeLists.txt
manipulation/ur_moveit_demos/launch/: complex_motion_demo.launch.py  test_planning_execution.launch.py
manipulation/ur_moveit_demos/src/: complex_motion_demo.cpp  custom_zigzag_motion.cpp  hello_moveit.cpp  plan_around_objects.cpp  test_planning_execution.cpp
mobile_robots/diff_drive_robot-main/: CMakeLists.txt
mobile_robots/diff_drive_robot-main/config/: locations.yaml  nav2_multirobot_params_2.yaml
mobile_robots/diff_drive_robot-main/launch/: handoff.launch.py
mobile_robots/diff_drive_robot-main/maps/: README.md  map_maze.yaml  map_obstacles.yaml
mobile_robots/diff_drive_robot-main/rviz/: bot.rviz
mobile_robots/diff_drive_robot-main/scripts/: handoff_coordinator.py
mobile_robots/pickplace_rl_mobile/: setup.py
mobile_robots/pickplace_rl_mobile/launch/: display_launch.py  full_system.launch.py  gazebo.launch.py  multi_world_training.launch.py  rl_train.launch.py  run_multi_training.sh  run_parallel_training.sh  run_rl_training.sh  standalone_rl_training.launch.py  vla_full_pipeline.launch.py
mobile_robots/pickplace_rl_mobile/pickplace_rl_mobile/: demo_pick_place.py  domain_randomizer.py  manip_rl_node.py  navigate_and_pick_node.py  object_memory_node.py  pickplace_env.py  smart_pick_place.py  task_planner_node.py  test_policy.py  train_rl.py  vla_action_node.py  vla_coordinator_node.py  vla_language_node.py  vla_vision_node.py
mobile_robots/pickplace_rl_mobile/pickplace_rl_mobile.egg-info/: SOURCES.txt
mobile_robots/pickplace_rl_mobile/urdf/: gazebo_sim_ros2_control.urdf.xacro  mobile_ur3.urdf  pickplace_mobile_arm.urdf
mobile_robots/pickplace_rl_mobile/worlds/: pickplace_world.world
simulation/ur_gazebo/: README.md
simulation/ur_gazebo/config/: ros_gz_bridge.yaml
simulation/ur_gazebo/launch/: full_demo.launch.py  point_cloud_viewer.launch.py  ur.gazebo.launch.py
simulation/ur_gazebo/models/red_cube/: model.config  model.sdf
simulation/ur_gazebo/models/red_cylinder/: model.sdf
simulation/ur_gazebo/worlds/: colored_blocks.world  pick_and_place_demo.world  rl_policy_demo.world  single_arm_transfer.world
tests/: eval_planner_accuracy.py  test_handoff_coordinator.py  test_llm_planner_node.py
tests/testing/: camera_view.py  check_point_cloud_pipeline.py  generated.urdf  pick_cylinders.py  point_cloud_viewer.py  teleop.py  test_grasp.py  test_pick.py  test_planners.py  test_steps.py
(+9 files in other folders)
