<?xml version="1.0"?>
<package format="3">
  <name>ur_llm_planner</name>
  <version>0.0.0</version>
  <description>Motion executor for UR arm via MoveIt Pilz PTP and ros2_control</description>
  <maintainer email="darshmenon02@gmail.com">darsh</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
